--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Visual Studio Code Editor
 .vscode/
 
+cmake-build-debug/
+build/
+
 # https://github.com/github/gitignore/blob/main/CMake.gitignore
 CMakeLists.txt.user
 CMakeCache.txt
