--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
-add_subdirectory(math)
+add_subdirectory(my_math)
 
-add_executable(cmake cmake.cpp)
+add_executable(test main.cpp)
